# Effort-AIGI-Detection

./: .gitignore  README.md  create_deepfake_video.py  create_deepfake_youtube copy.py  create_deepfake_youtube.py  requirements.txt
DeepfakeBench/training/: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  JOB_TRAINING_README.md  METHOD_WEIGHTING_GUIDE.md  analyze_buckets.py  analyze_id_overlap.py  analyze_split_strategies.py  app.py  app2.py  app3.py  app4.py  base_and_custom_eval.py  batch_demo.py  check_and_raise_quota.sh  cloudbuild.yaml  compare_checkpoints.py  compare_manifests.py  custom_eval.py  demo.py  diagnose_manifests.py  entrypoint.sh  entrypoint_parallel_jobs.sh  evaluate_api.py  flexible_augmentations.py  fuse_weights.py  infer.py  inspect_checkpoint.py  inspect_ids.py  investigate_checkpoint.py  investigate_data.py  investigate_face_crops.py  investigate_manifest.py  launch_experiment.sh  launch_experiment_jobs.sh  launch_sweep.py  launch_sweep_jobs.sh  logger.py  night_exp.sh  (+28 more)
DeepfakeBench/training/.ipynb_checkpoints/: logger-checkpoint.py  train-checkpoint.py
DeepfakeBench/training/combined_model/: INDEX.md  NEXT_STEPS_REALTIME_DEPLOYMENT.md  QUICK_START.md  README_SUMMARY.md  UNDERSTANDING_NOISY_OR.md  architecture_comparison.md  define_detection_strategy.py  detection strategy results out full V3.txt  filtered_thresh_v1.py  final_summary.py  run_video_level_fusion.py  run_video_level_fusion_v2.py  simulate_realtime_detection.py  small_test.py  solve_bottleneck.py  solve_with_uncertian.py  solve_with_uncertian_narrow.py
DeepfakeBench/training/config/: dataloader_config.yml  test_config.yaml  test_dataloader_config.yml  train_config.yaml
DeepfakeBench/training/config/detector/: effort.yaml
DeepfakeBench/training/dataset/: abstract_dataset.py  albu.py  correct_manifest_categories.py  create_property_manifest.py  create_unified_manifest.py  dataloaders.py  face_curator_tiktok_data.py  gcp_face_processor_v2.py  test_dataloader.py  verify_manifest.py
DeepfakeBench/training/debug/: debug_model_loading.py  domain_analyzer.py  find_duplicates.py  model_analyzer.py
DeepfakeBench/training/detectors/: __init__.py  effort_detector.py
DeepfakeBench/training/experiments_configs/: best_results.txt  example_exp.yaml  frame_level_baseline_parameters.yaml  lesson_strategy.txt  methods_details.txt  video_level_baseline_parameters.yaml
DeepfakeBench/training/experiments_configs/27sep/: exp5.yaml
DeepfakeBench/training/experiments_configs/29_aug/: exp3.yaml  exp5.yaml
DeepfakeBench/training/experiments_configs/night1/: night1_16x4.yaml  night1_32x2.yaml  night1_64x1_full_data.yaml  night1_64x1_lre4.yaml  night1_64x1_lre5.yaml  night1_8x8.yaml
DeepfakeBench/training/metrics/: utils.py
DeepfakeBench/training/tools/: wandb_topk.py
DeepfakeBench/training/trainer/: trainer.py
DeepfakeBench/training/wandb/: latest-run
DeepfakeBench/training/wandb/run-20250727_165757-s0j5bclh/: run-s0j5bclh.wandb
DeepfakeBench/training/wandb/run-20250727_172045-707h61cm/: run-707h61cm.wandb
DeepfakeBench/training/wandb/run-20250727_172418-gfv71ik2/: run-gfv71ik2.wandb
DeepfakeBench/training/wma/: ARCHITECTURE_DIAGRAM.md  BETTER_MONITORING.md  CMakeLists.txt  INTEGRATION_CHECKLIST.md  TEST_FOUR_MODEL_FUSION_README.md  THIS_SUMMARY.md  VIDEO_TESTING_GUIDE.md  __init__.py  cloud_client_tester.py  convert_prints_to_logging.py  participant_manager.py  participant_name_matcher.py  quick_test_real_servers.sh  requirements.txt  server.py  server_basic_alive_test.py  simple_test.py  start_backend.py  test_four_model_fusion.py  test_nonsensical_id_detection.py  test_participant_id_fix.py  test_server_connection.py  wma-backend.service  wma_folder_watcher.py  wma_streaming_pb2.py  wma_streaming_pb2_grpc.py
DeepfakeBench/training/wma/panel/: package.json
DeepfakeBench/training/wma/protos/: wma_streaming.proto
DeepfakeBench/training/wma/storage/: __init__.py  data_writer.py
DeepfakeBench/training/wma/utils/: banner_simulator.py
GCP_codes/: README_prefetch.md  code (1).py  code (2).py  code.py  config.yaml  config.yml  dataloaders.py  main.py  prepare_splits.py
UniversalFakeDetect_Benchmark/models/: __init__.py
data_collection/: requirements.txt
data_collection/real_data_collection/: .env  config.py  config.yaml  face.py  probe.py  scraper.py  sources.csv  stream_utils.py  youtube-cookies.txt  youtube_api.py  youtube_avspeech_scraper.py  youtube_clips_scraper.py
deploy/: deploy_wma.sh
make_csvs_demography/: make_csv_UTK_age_gender_race.py  make_csv_youtube.py  make_video_demography.py
modules/processors/frame/: face_swapper.py
(+10 files in other folders)
